--- a/Essays/为什么书本不起作用.md
+++ b/Essays/为什么书本不起作用.md
@@ -6,7 +6,7 @@ Books are easy to take for granted. Not any specific book, I mean: the *form* of
 
 Picture some serious non-fiction tomes. *The Selfish Gene*; *Thinking, Fast and Slow*; *Guns, Germs, and Steel*; etc. Have you ever had a book like this—one you’d read—come up in conversation, only to discover that you’d absorbed what amounts to a few sentences? I’ll be honest: it happens to me regularly. Often things go well at first. I’ll feel I can sketch the basic claims, paint the surface; but when someone asks a basic probing question, the edifice instantly collapses. Sometimes it’s a memory issue: I simply can’t recall the relevant details. But just as often, as I grasp about, I’ll realize *I had never really understood* the idea in question, though I’d certainly thought I understood when I read the book. Indeed, I’ll realize that *I had barely noticed how little I’d absorbed* until that very moment.
 
-想象一些严肃的非小说类读物。《自私的基因》；《思考，快与慢》；《枪炮，病菌，和钢铁》；等等。你有没有遇到过这样的书——你读过的——在谈话中出现，却发现你只吸收了几句话？我说实话：这种情况经常发生在我身上。通常情况下，事情一开始很顺利。我觉得我可以勾勒出基本的主旨，描绘出表象；但当有人提出一个基本的探究性问题时，这个大厦就立刻坍塌了。有时是记忆问题。我根本无法回忆起相关的细节。但同样经常的是，当我抓紧时间的时候，我会意识到*我从来没有真正理解*有关的想法，尽管我在读这本书的时候肯定认为我理解。事实上，我会意识到，在那一刻到来之前，*我几乎没有注意到我所吸收的东西有多少*。
+想象一些严肃的非小说类读物。《自私的基因》；《思考，快与慢》；《枪炮，病菌，和钢铁》；等等。你有没有遇到过这样的书——你读过的——在谈话中出现，却发现你只吸收了几句话？我说实话：这种情况经常发生在我身上。通常情况下，事情一开始很顺利。我觉得我可以勾勒出基本的主旨，描绘出表象；但当有人提出一个基本的探究性问题时，这个大厦就立刻坍塌了。有时是记忆问题：我根本无法回忆起相关的细节。但同样经常的是，当我抓紧时间的时候，我会意识到*我从来没有真正理解*有关的想法，尽管我在读这本书的时候肯定认为我理解。事实上，我会意识到，在那一刻到来之前，*我几乎没有注意到我所吸收的东西有多少*。
 
 I know I’m not alone here. When I share this observation with others—even others, like myself, who take learning seriously—it seems that everyone has had a similar experience. The conversation often feels confessional: there’s some bashfulness, almost as if these lapses reveal some unusual character flaw. I don’t think it’s a character flaw, but whatever it is, it’s certainly not unusual. In fact, I suspect this is the *default* experience for most readers. The situation only feels embarrassing because it’s hard to see how common it is.
 
@@ -22,7 +22,7 @@ I’m not suggesting that all those hours were wasted. Many readers *enjoyed* re
 
 This essay is not about that kind of book. It’s about explanatory non-fiction like the books I mentioned above, which aim to convey detailed knowledge. Some people may have read *Thinking, Fast and Slow* for entertainment value, but in exchange for their tens of millions of collective hours, I suspect many readers—or maybe even most readers—expected to walk away with more. Why else would we feel so startled when we notice how little we’ve absorbed from something we’ve read?
 
-这篇文章不是关于这种书的。它是关于像我上面提到的那些旨在传达详细知识的、解释型的非小说读物。有些人可能是为了娱乐价值而阅读《思考，快与慢》，但为了换取他们数以千万计的集体时间，我猜想许多读者——甚至可能是大多数读者——期望能得到更多。否则，当我们注意到我们从所读的东西中吸收的东西很少时，我们为什么会感到如此惊愕？
+本文不是关于这种书的。它是关于像我上面提到的那些旨在传达详细知识的、解释型的非小说读物。有些人可能是为了娱乐价值而阅读《思考，快与慢》，但为了换取他们数以千万计的集体时间，我猜想许多读者——甚至可能是大多数读者——期望能得到更多。否则，当我们注意到我们从所读的东西中吸收的东西很少时，我们为什么会感到如此惊愕？
 
 All this suggests a peculiar conclusion: as a medium, *books are surprisingly bad at conveying knowledge, and readers mostly don’t realize it*.
 
@@ -38,7 +38,7 @@ The conclusion is peculiar, in part, because books are shockingly powerful knowl
 
 Indeed: books *are* magical! Human progress in the era of mass communication makes clear that some readers *really do* absorb deep knowledge from books, at least some of the time. So why do books seem to work for *some* people *sometimes?* Why does the medium fail when it fails?
 
-的确：书本*是*有魔力的！人类在大众传播时代的进步清楚地表明，一些读者*真的*从书中吸收了深刻的知识，至少在某些时候是如此。那么，为什么书本似乎对*某些人*有时是有效的呢？为什么媒介有时也会失败？
+的确：书本*是*有魔力的！人类在大众传授时代的进步清楚地表明，一些读者*真的*从书中吸收了深刻的知识，至少在某些时候是如此。那么，为什么书本似乎对*某些人*有时是有效的呢？为什么媒介有时也会失败？
 
 In these brief notes, we’ll explore why books so often don’t work, and why they succeed when they do.[^2] Armed with that understanding, we’ll glimpse not only how we might improve books as a medium, but also how we might weave unfamiliar new forms—not from paper, and not from pixels, but from insights about human cognition.
 
@@ -48,7 +48,7 @@ In these brief notes, we’ll explore why books so often don’t work, and why t
 
 We’ve been discussing books so far, but have you ever had the same type of experience with a *lecture?* It’s easy to attend a lecture and feel that you understand, only to discover over that night’s problem set that you understood very little. Memory feels partly to blame: you might sense that you knew certain details at one time, but you’ve forgotten. Yet we can’t pin this all on memory. When you pull on certain strings from the lecture, you might discover that *you had never really understood*, though you’d certainly *thought* you understood during the lecture.
 
-到目前为止，我们一直在讨论书本，但你是否对*讲座有过同样的经历？*很容易在听完讲座后觉得自己明白了，但在当晚的问题集上却发现自己理解得很少。记忆是部分原因：你可能感觉到你曾经知道某些细节，但你已经忘记了。然而，我们不能把这一切都归咎于记忆。当你拉动讲座中的某些弦时，你可能会发现*你从来没有真正理解*，尽管你在讲座中肯定*认为*你理解。
+到目前为止，我们一直在讨论书本，但你是否对*讲座*有过同样的经历？很容易在听完讲座后觉得自己明白了，但在当晚的习题集上却发现自己理解得很少。记忆是部分原因：你可能感觉到你曾经知道某些细节，但你已经忘记了。然而，我们不能把这一切都归咎于记忆。当你拉动讲座中的某些弦时，你可能会发现*你从来没有真正理解*，尽管你在讲座中肯定*认为*你理解。
 
 You’ve probably internalized the notion that lectures have this problem, even if the parallel claim for books feels more alien. After all, doesn’t this portrait of a teacher sound like a cliché?
 
@@ -72,7 +72,7 @@ To illustrate what I mean, I’ll try to draw on your own learning experiences. 
 
 If we collect enough of these underlying “truths,” some shared themes might emerge, suggesting a more coherent theory of how learning happens. We’ll call such theories *cognitive models*. Some learning strategies suggest the same model; others suggest conflicting models. Some of these models are empirically testable; others aren’t; still others are already known to be false. By focusing on these models, instead of a herd of one-off strategies, we can seek more general implications. We can ask: if we take a particular cognitive model seriously, what does it suggest will (or won’t) help us understand something?
 
-如果我们收集了足够多的这些潜在的 "真理"，一些共同的主题可能会出现，这就表明了一个关于学习如何发生的更连贯的理论。我们将这种理论称为*认知模型*。有些学习策略提出了相同的模型；有些则提出了相互冲突的模型。这些模型中，有些是可以实证检验的；有些则不是；还有一些已经知道是错误的。通过关注这些模型，而不是一群一次性的策略，我们可以寻求更普遍的影响。我们可以问：如果我们认真对待一个特定的认知模型，它表明什么会（或不会）帮助我们理解某些东西？
+如果我们收集了足够多的这些潜在的 "真理"，一些共同的主题可能会出现，这就表明了一个关于学习如何发生的更连贯的理论。我们将这种理论称为*认知模型*。有些学习策略提出了相同的模型；有些则提出了相互冲突的模型。这些模型中，有些是可以实证检验的；有些则不是；还有一些已经知道是错误的。通过关注这些模型，而不是一批一次性的策略，我们可以寻求更普遍的影响。我们可以问：如果我们认真对待一个特定的认知模型，它表明什么会（或不会）帮助我们理解某些东西？
 
 That’s an important question because *it’s hard to convey knowledge*. Most lecture attendees don’t absorb the intended knowledge; most book readers don’t absorb the intended knowledge. Failure is the default here. So if you hope to help others understand things, you had better draw on some great ideas about how people learn. It would be nice if this weren’t true. It would be nice if one could simply explain an idea clearly to someone, then trust that they’ve understood it. Unfortunately, as you’ve likely seen in classrooms and in your own life, complex ideas are rarely understood so automatically.
 
@@ -80,7 +80,7 @@ That’s an important question because *it’s hard to convey knowledge*. Most l
 
 Lectures, as a medium, have no carefully-considered cognitive model at their foundation. Yet if we were aliens observing typical lectures from afar, we might notice the *implicit* model they appear to share: “the lecturer says words describing an idea; the class hears the words and maybe scribbles in a notebook; then the class understands the idea.” In learning sciences, we call this model “[transmissionism](https://en.wiktionary.org/wiki/transmissionism).” It’s the notion that knowledge can be directly transmitted from teacher to student, like transcribing text from one page onto another. If only! The idea is so thoroughly discredited that “transmissionism” is only used pejoratively, in reference to naive historical teaching practices. Or as an ad-hominem in juicy academic spats.
 
-讲座作为一种媒介，在其基础上没有经过深思熟虑的认知模型。然而，如果我们是外星人，从远处观察典型的讲座，我们可能会注意到他们似乎共享的*隐性*模式。"演讲者说描述一个想法的话语；全班同学听到这些话，也许在笔记本上涂鸦；然后全班同学理解这个想法"。在学习科学中，我们把这种模式称为"[传播主义](https://en.wiktionary.org/wiki/transmissionism)"。这是一种观念，认为知识可以直接从教师传给学生，就像把文字从一页转录到另一页。如果是这样的话！这个想法被彻底否定了，以至于 "传播主义 "只被用于贬义，指的是幼稚的历史教学实践。或者在多汁的学术争论中作为一种诽谤。
+讲座作为一种媒介，在其基础上没有经过深思熟虑的认知模型。然而，如果我们是外星人，从远处观察典型的讲座，我们可能会注意到他们似乎共享的*隐性*模式。"演讲者说了一些话语描述一个想法；全班同学听到这些话，也许在笔记本上涂鸦；然后全班同学理解这个想法"。在学习科学中，我们把这种模式称为"[传授主义](https://en.wiktionary.org/wiki/transmissionism)"。这是一种观念，认为知识可以直接从教师传给学生，就像把文字从一页转录到另一页。如果是这样的话！这个想法被彻底否定了，以至于 "传授主义 "只被用于贬义，指的是幼稚的历史教学实践。或者在多汁的学术争论中作为一种诽谤。
 
 Of course, good lecturers don’t usually *believe* that simply telling their audience about an idea causes them to understand it. It’s just that lectures, as a format, are shaped *as if* that were true, so lecturers mostly *behave* as if it were true.
 
@@ -92,15 +92,15 @@ If pressed, many lecturers would offer a more plausible cognitive model: underst
 
 [Listeners’ attention wanders after a few minutes](https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00619/full), so wouldn’t we want to interleave the problem-solving sessions with the lecture? Live speeches can’t be paused or rewound, so aren’t they awfully lossy for conveying raw information? [People can read much more quickly](https://iovs.arvojournals.org/article.aspx?articleid=2166061) than [a lecturer speaks](https://dl.acm.org/citation.cfm?id=638284), so wouldn’t text be more efficient? And so on—it’s already clear that the traditional lecture format isn’t particularly informed by this model.
 
-[听众的注意力在几分钟后就会游离](https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00619/full)，所以我们不会想把解决问题的环节与演讲穿插进行吗？现场演讲不能暂停或回放，所以对于传达原始信息来说，它们不是非常有损失吗？[人们的阅读速度](https://iovs.arvojournals.org/article.aspx?articleid=2166061)比[演讲者的讲话](https://dl.acm.org/citation.cfm?id=638284)快得多，所以文字不是更有效率吗？诸如此类，已经很明显，传统的讲座形式并不是特别受这种模式的影响。
+[听众的注意力在几分钟后就会走神](https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00619/full)，所以我们不会想把解决问题的环节与讲座穿插进行吗？现场演讲不能暂停或回放，所以对于传达原始信息来说，它们不是非常有损失吗？[人们的阅读速度](https://iovs.arvojournals.org/article.aspx?articleid=2166061)比[演讲者的讲话](https://dl.acm.org/citation.cfm?id=638284)快得多，所以文字不是更有效率吗？诸如此类，已经很明显，传统的讲座形式并不是特别受这种模式的影响。
 
 The lectures-as-warmup model is a post-hoc rationalization, but it does gesture at a deep theory about cognition: *to understand something, you must actively engage with it*. That notion, taken seriously, would utterly transform classrooms. We’d prioritize activities like interactive discussions and projects; we’d deploy direct instruction only when it’s the best way to enable those activities. I’m not idly speculating: for the last few decades, this has been one of the central evolutionary forces in US K–12 policy and practice.
 
-讲座-热身模型是一种事后的合理化，但它确实表明了一种关于认知的深刻理论。*要理解某样东西，你必须积极地参与其中*。这个概念如果被认真对待，将彻底改变课堂。我们会优先考虑互动讨论和项目等活动；只有当直接教学是实现这些活动的最佳方式时，我们才会部署直接教学。我不是在胡乱猜测：在过去的几十年里，这一直是美国 K-12 政策和实践的核心演变力量之一。
+讲座-热身模型是一种事后的合理化，但它确实表明了一种关于认知的深刻理论。*要理解某样东西，你必须积极地参与其中*。这个概念如果被认真对待，将彻底改变课堂。我们会优先考虑互动讨论和项目等活动；只有当直接教学是实现这些活动的最佳方式时，我们才会应用直接教学。我不是在胡乱猜测：在过去的几十年里，这一直是美国 K-12 政策和实践的核心演变力量之一。
 
 In summary: lectures don’t work because the medium lacks a functioning cognitive model. It’s (implicitly) built on a faulty idea about how people learn—transmissionism—which we can caricaturize as “lecturer says words describing an idea; students hear words; then they understand.” When lectures *do* work, it’s generally as part of a broader learning context (e.g. projects, problem sets) with a better cognitive model. But the lectures aren’t pulling their weight. If we really wanted to adopt the better model, we’d ditch the lectures, and indeed, that’s what’s been happening in US K–12 education.
 
-总而言之：讲座不起作用，因为媒介缺乏一个有效的认知模型。它（隐含地）建立在一个关于人们如何学习的错误想法上——传授主义——我们可以把它讽刺为 "授课者说的话描述了一个想法；学生听到的话；然后他们就明白了。" 当讲座*起作用*时，它通常是作为更广泛的学习背景（如项目、问题集）的一部分，具有更好的认知模型。但是讲座并没有发挥其作用。如果我们真的想采用更好的模式，我们就会放弃讲座，事实上，这正是美国 K-12 教育中正在发生的事情。
+总而言之：讲座不起作用，因为媒介缺乏一个有效的认知模型。它（隐含地）建立在一个关于人们如何学习的错误想法上——传授主义——我们可以把它讽刺为 "授课者说的话描述了一个想法；学生听到的话；然后他们就明白了。" 当讲座*起作用*时，它通常是作为更广泛的学习背景（如项目、问题集）的一部分，具有更好的认知模型。但是讲座并没有发挥其作用。如果我们真的想采用更好的模型，我们就会放弃讲座，事实上，这正是美国 K-12 教育中正在发生的事情。
 
 With our intuitions primed through lectures, we’ll see that books, as a medium, reflect the same flawed ideas about how people learn.
 
@@ -110,15 +110,15 @@ With our intuitions primed through lectures, we’ll see that books, as a medium
 
 Like lectures, books have no carefully-considered cognitive model at their foundation, but the medium does have an *implicit* model. And like lectures, *that model is transmissionism*. Sequences of words in sequences of lines in sequences of pages, the form of a book suggests *people absorb knowledge by reading sentences*. In caricature: “The author describes an idea in words on the page; the reader reads the words; then the reader understands the idea. When the reader reaches the last page, they’ve finished the book.” Of course, most authors don’t believe that people learn things this way, but because the medium makes the assumption invisible, it’s hard to question.
 
-像讲座一样，书本在其基础上没有经过仔细考虑的认知模型，但媒介确实有一个*隐含的*模式。和讲座一样，*这种模式是传授主义*。词的序列在行的序列在页的序列中，书的形式表明*人们通过阅读句子吸收知识*。在漫画中。"作者在书页上用文字描述一个想法；读者阅读这些文字；然后读者理解了这个想法。当读者读到最后一页时，他们就完成了这本书。" 当然，大多数作者并不相信人们是这样学习的，但由于媒介使这种假设不可见，所以很难质疑。
+像讲座一样，书本在其基础上没有经过仔细考虑的认知模型，但媒介确实有一个*隐含的*模式。和讲座一样，*这种模式是传授主义*。词的序列在行的序列在页的序列中，书的形式表明*人们通过阅读句子吸收知识*。在漫画中："作者在书页上用文字描述一个想法；读者阅读这些文字；然后读者理解了这个想法。当读者读到最后一页时，他们就完成了这本书。" 当然，大多数作者并不相信人们是这样学习的，但由于媒介使这种假设不可见，所以很难质疑。
 
 Like lecturers, many authors would offer a more plausible cognitive model when pressed. Readers can’t just *read* the words. They have to really *think* about them. Maybe take some notes. Discuss with others. Write an essay in response. Like a lecture, a book is a warmup for the thinking that happens later. Great: that’s a better model! Let’s look at how it plays out.
 
-像授课者一样，许多作者在被追问时都会提供一个更合理的认知模型。读者不能只是*读*字。他们必须真正*思考*它们。也许会做一些笔记。与他人讨论。写一篇文章作为回应。就像讲座一样，书是为以后的思考做的热身。很好：这是一个更好的模式! 让我们来看看它是如何发挥的。
+像授课者一样，许多作者在被追问时都会提供一个更合理的认知模型。读者不能只是*读*字。他们必须真正*思考*它们。也许会做一些笔记。与他人讨论。写一篇文章作为回应。就像讲座一样，书是为以后的思考做的热身。很好：这是一个更好的模型！让我们来看看它是如何发挥的。
 
 I acknowledged earlier that of course, some people *do* absorb knowledge from books. Indeed, those are the people who really do think about what they’re reading. The process is often invisible. These readers’ inner monologues have sounds like: “This idea reminds me of…,” “This point conflicts with…,” “I don’t really understand how…,” etc. If they take some notes, they’re not simply transcribing the author’s words: they’re summarizing, synthesizing, analyzing.
 
-我之前承认，当然，有些人*确实从书本中吸收知识。事实上，这些人确实在思考他们所读的东西。这个过程往往是看不见的。这些读者的内心独白有这样的声音。"这个想法让我想起了......"，"这个观点与......相冲突"，"我不太明白...... "等等。如果他们做一些笔记，他们就不是简单地抄写作者的话：他们在总结、综合、分析。
+我之前承认，当然，有些人*确实*从书本中吸收知识。事实上，这些人确实在思考他们所读的东西。这个过程往往是看不见的。这些读者的内心独白有这样的声音："这个想法让我想起了......"，"这个观点与......相冲突"，"我不太明白...... "等等。如果他们做一些笔记，他们就不是简单地抄写作者的话：他们在总结、综合、分析。
 
 Unfortunately, these tactics don’t come easily. Readers must learn specific reflective strategies. “What questions should I be asking? How should I summarize what I’m reading?” Readers must run their own feedback loops. “Did I understand that? Should I re-read it? Consult another text?” Readers must understand their own cognition. “What does it feel like to understand something? Where are my blind spots?”
 
@@ -134,7 +134,7 @@ Where is the book in all this? If we believe that successful reading requires en
 
 Of course, great authors earnestly want readers to think carefully about their words. These authors form sophisticated pictures of their readers’ evolving conceptions. They anticipate confusions readers might have, then shape their prose to acknowledge and mitigate those issues. They make constant choices about depth and detail using these models. They suggest what background knowledge might be needed for certain passages and where to go to get it.
 
-当然，伟大的作者真诚地希望读者能仔细思考他们的文字。这些作者对读者不断变化的概念形成了复杂的想象。他们预计到读者可能会有的困惑，然后塑造他们的散文，以承认和减轻这些问题。他们利用这些模式对深度和细节进行不断选择。他们建议某些段落可能需要哪些背景知识，以及到哪里去获得这些知识。
+当然，伟大的作者真诚地希望读者能仔细思考他们的文字。这些作者对读者不断变化的概念形成了复杂的想象。他们预计到读者可能会有的困惑，然后塑造他们的散文，以承认和减轻这些问题。他们利用这些模型对深度和细节进行不断选择。他们建议某些段落可能需要哪些背景知识，以及到哪里去获得这些知识。
 
 By shouldering some of readers’ self-monitoring and regulation, these authors’ efforts can indeed lighten the metacognitive burden. But metacognition is an inherently dynamic process, evolving continuously as readers’ own conceptions evolve. Books are static. Prose can frame or stimulate readers’ thoughts, but prose can’t behave or respond to those thoughts as they unfold in each reader’s head. The reader must plan and steer their own feedback loops.
 
@@ -146,7 +146,7 @@ If lecturers believe that lectures are a warm-up for the understanding developed
 
 If the model is that people understand written ideas by thinking carefully about them, what would books look like if they were built around helping people do that?
 
-如果模式是人们通过仔细思考来理解书面思想，那么如果书本是围绕着帮助人们这样做而建立的，那么书本会是什么样子呢？
+如果模型是人们通过仔细思考来理解书面思想，那么如果书本是围绕着帮助人们这样做而建立的，那么书本会是什么样子呢？
 
 ### What about textbooks? 那么教科书呢？
 
@@ -156,7 +156,7 @@ Wait—isn’t that what textbooks do? Can we just slap some exercises and discu
 
 Unlike most non-fiction books, textbooks usually *are* built around explicit cognitive models. For instance, they often alternate between explanations which introduce concepts, and exercises which push students to think about those concepts in specific ways. It’s great that textbooks didn’t choose their cognitive models by accident. That’s an important first step. But it’s not enough: people still struggle to reliably absorb knowledge from textbooks.
 
-与大多数非小说类读物不同，教科书通常*是*围绕着明确的认知模型而建立的。例如，它们通常在介绍概念的解释和推动学生以特定方式思考这些概念的练习之间交替进行。教科书没有意外地选择他们的认知模型，这很好。这是重要的第一步。但这还不够：人们仍然很难可靠地吸收教科书中的知识。
+与大多数非小说类读物不同，教科书通常*是*围绕着明确的认知模型而建立的。例如，它们通常在介绍概念的解释和推动学生以特定方式思考这些概念的练习之间交替进行。教科书没有意外地选择它们的认知模型，这很好。这是重要的第一步。但这还不够：人们仍然很难可靠地吸收教科书中的知识。
 
 I’ll now make the case that textbooks don’t effectively implement their own models about how people learn—and that even if they did, textbooks’ models neglect important ideas about how people learn.
 
@@ -230,7 +230,7 @@ This “grain” is what drives me when I gripe that books lack a functioning co
 
 How might we design a medium so that its “grain” bends in line with how people think and learn? So that by simply engaging with an author’s work in the medium—engaging in the obvious fashion; engaging in this medium’s equivalent of books’ “read all the words on the first page, then repeat with the next, and so on”—one would automatically do what’s necessary to understand? So that, in some deep way, the default actions and patterns of thought when engaging with this medium *are the same thing as* “what’s necessary to understand”?
 
-我们如何设计一种媒介，使其 "纹理" 与人们的思维和学习方式相一致？这样，通过简单地参与作者在媒介中的工作--以明显的方式参与；参与这种媒介相当于书本上的 "阅读第一页的所有文字，然后重复下一页，以此类推"——人们会自动做必要的事情来理解？那么，在某种深层次上，参与这种媒介时的默认行动和思维模式*是与*"理解所需" 相同的东西？
+我们如何设计一种媒介，使其 "纹理" 与人们的思维和学习方式相一致？这样，通过简单地参与作者在媒介中的工作——以明显的方式参与；参与这种媒介相当于书本上的 "阅读第一页的所有文字，然后重复下一页，以此类推"——人们会自动做必要的事情来理解？那么，在某种深层次上，参与这种媒介时的默认行动和思维模式*是与* "理解所需" 相同的东西？
 
 That’s a tall order. Even on a theoretical level, it’s not clear what’s necessary for understanding. Indeed, that framing’s too narrow: there are many paths to understanding a topic. But cognitive scientists and educators have mapped some parts of this space, and they’ve distilled some powerful ideas we can use as a starting point.
 
@@ -266,11 +266,11 @@ As always, my acknowledgment of these kind contributions should not be construed
 
 一如既往，我对这些善意的贡献的承认不应该被理解为对这些人的认可。
 
-### Citing this work 引用这项工作
+### Citing this work 引用这篇作品
 
 In academic work, please cite this as:
 
-在学术工作中，请将此引用为：
+在学术作品，请将此引用为：
 
 > Andy Matuschak, “Why books don’t work”, https://andymatuschak.org/books, San Francisco (2019).
 
@@ -278,7 +278,7 @@ In academic work, please cite this as:
 
 This work is licensed under a [Creative Commons Attribution-NonCommercial 3.0 Unported](https://creativecommons.org/licenses/by-nc/3.0/deed.en_GB) license, so you can redistribute it or adapt it for any non-commercial purposes (with credit).
 
-这项工作是在[知识共享署名-非商业性3.0 Unported](https://creativecommons.org/licenses/by-nc/3.0/deed.en_GB)许可下进行的，因此你可以为任何非商业目的重新分配或改编它（注明来源）。
+这篇作品是在[知识共享署名-非商业性3.0 Unported](https://creativecommons.org/licenses/by-nc/3.0/deed.en_GB)许可下进行的，因此你可以为任何非商业目的重新分配或改编它（注明来源）。
 
 ### History 历史
 
