--- a/Essays/欧洲流氓.md
+++ b/Essays/欧洲流氓.md
@@ -1,66 +1,114 @@
 # European outcasts 欧洲流氓
 
-## Hall of Shame
+## Hall of Shame 耻辱厅
 
 Germany and Sweden stand in the Hall of Shame in the European Union. [Homeschooling](https://supermemo.guru/wiki/Homeschooling) is banned in those countries. The best forms of learning for kids are illegal. Horror stories of home invasion by social workers and police are numerous. It would be enough to peek at Finland were excellent school system results in very low interest in homeschooling despite excellent stance on freedom. The ban will be overturned with a cultural shift towards understanding the science of learning. Before that happens, many kids will be denied their best options for growth.
 
+德国和瑞典站在欧盟的耻辱厅里。[家庭教育](https://supermemo.guru/wiki/Homeschooling)在这些国家被禁止。对孩子来说最好的学习形式是非法的。关于社会工作者和警察入侵家庭的恐怖故事不胜枚举。只要看看芬兰就够了，尽管芬兰的学校制度很好，但对家庭教育的兴趣却很低。随着文化的转变，对学习科学的理解，这一禁令将被推翻。在这之前，许多孩子将被剥夺他们成长的最佳选择。
+
 Words from [Berlin Declaration (2012)](https://ghex.world/advocacy/declarations/berlin-declaration/) fit the context:
 
+来自[柏林宣言（2012）](https://ghex.world/advocacy/declarations/berlin-declaration/)的话语符合背景：
+
 > We condemn the policies of those nations that prohibit the practice of home education and permit the persecution of home educating families through excessive or coercive fines, threats to parental custody and application of criminal sanctions
+>
+> 我们谴责那些禁止家庭教育和允许通过过度或强制性的罚款、威胁父母监护权和实施刑事制裁来迫害家庭教育家庭的国家的政策。
 
 As for Finland, I wonder if their school systems isn't crafted to produce meek and obedient population (see: [Finnish school paradox](https://supermemo.guru/wiki/Finnish_school_paradox)). A red flag indicator is the fact that Finland still disrupts young lives with [conscription](https://supermemo.guru/wiki/Conscription). When a citizen's initiative to abolish the concept in 2013 failed to receive sufficient support, I wondered if there aren't enough angry young man in Finland to change the status quo? Perhaps all that healthy anger is gradually extinguished by schooling? Is if fair that Bill Gates could devote all his youth to Microsoft while Linus Torvalds had to waste 11 months for the military service? Those 11 months might have changed history. Polish army tried to grab my neck in the year preceding [SuperMemo](https://supermemo.guru/wiki/SuperMemo). If they succeeded, emergence of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) apps after 1987 would be down to a lottery ticket.
 
-## Who wants to ban homeschooling?
+至于芬兰，我想知道他们的学校系统是不是为了培养温顺和顺从的人口（见：[芬兰学校悖论](https://supermemo.guru/wiki/Finnish_school_paradox)）。一个红旗标志是，芬兰仍然用[征兵](https://supermemo.guru/wiki/Conscription)来扰乱年轻人的生活。当2013年一项关于废除这一概念的公民倡议未能得到足够的支持时，我想知道在芬兰是否没有足够的愤怒的年轻人来改变现状？也许所有这些健康的愤怒都被学校教育逐渐熄灭了？比尔-盖茨可以把所有的青春都献给微软，而莱纳斯-托瓦尔兹却不得不为服兵役浪费 11 个月，这公平吗？这 11 个月可能改变了历史。在[SuperMemo](https://supermemo.guru/wiki/SuperMemo)的前一年，波兰军队试图抓住我的脖子。如果他们成功了，1987 年以后出现的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)应用程序将沦为一张彩票。
+
+## Who wants to ban homeschooling? 谁想禁止家庭教育？
 
 In reference to home education, there is some meeting of mind between socialists, progressives, atheists, multiculturalists, feminists, Swedish culture, and German culture. Feminists use schooling to free women. Atheists hope to kill religions. Egalitarians and socialists hope to educate kids "equally". Swedes love the social function of schools. Germans are fond of [ordnung](https://en.wiktionary.org/wiki/Ordnung) and Prussian discipline.
 
+在提到家庭教育时，社会主义者、进步人士、无神论者、多元文化主义者、女权主义者、瑞典文化和德国文化之间有一些思想上的碰撞。女权主义者利用学校教育来解放妇女。无神论者希望能杀死宗教。平等主义者和社会主义者希望能 "平等 "地教育孩子。瑞典人喜欢学校的社会功能。德国人喜欢[ordnung](https://en.wiktionary.org/wiki/Ordnung)和普鲁士式的纪律。
+
 Legal regulations in education are an expression of the wish to control other people's minds
+
+教育中的法律规定是控制他人思想的愿望的体现
 
 For an example of an appetite for legal control see: [Presumptive ban on homeschooling in the USA (Elizabeth Bartholet)](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
 
-## Common denominators
+对法律控制的胃口的例子见：[美国对家庭教育的推定禁令（Elizabeth Bartholet）](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
+
+## Common denominators 共同点
 
 Both countries were pretty welcoming in the wave of immigration. However, their good hearts turned cold when it comes to upbringing. A non-Christian or non-European parent has little choice but to send her children early to daycare to begin the process of "integration" and "socialization". This has all the appearances of a warm welcome for labor and young blood while still being closed to foreign cultural influences.
 
+在移民浪潮中，这两个国家都相当欢迎。然而，当涉及到教养问题时，他们的好心就变冷了。非基督徒或非欧洲人的父母没有什么选择，只能早早地把孩子送到日托所，开始 "融合 "和 "社会化 "的过程。这在表面上看是对劳动力和年轻血液的热烈欢迎，但对外国文化的影响仍然是封闭的。
+
 Those countries provide an excellent illustration of [self-perpetuating cultural feedback loop of schooling](https://supermemo.guru/wiki/Phone_book). [Compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) makes it hard to see the benefits of [free learning](https://supermemo.guru/wiki/Free_learning). Society believes that *"school is good"* and that more school is better. This provides a rich feeding ground for educational mythology such as [Digital Dementia](https://supermemo.guru/wiki/Digital_Dementia). An average German kid speaks poor English and has little idea of concepts such as [homeschooling](https://supermemo.guru/wiki/Homeschooling), let alone [unschooling](https://supermemo.guru/wiki/Unschooling) or [democratic schools](https://supermemo.guru/wiki/Democratic_school). An average German or Swedish citizen is pretty convinced that school is necessary due to the myth of the value of school socialization.
+
+这些国家为[学校教育的自我文化反馈循环](https://supermemo.guru/wiki/Phone_book)提供了一个很好的说明。[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)使得人们很难看到[自由学习](https://supermemo.guru/wiki/Free_learning)的好处。社会认为，*"学校是好的 "*，更多的学校是更好的。这为[数字痴呆症](https://supermemo.guru/wiki/Digital_Dementia)等教育神话提供了丰富的素材。一个普通的德国孩子英语很差，对[家庭教育](https://supermemo.guru/wiki/Homeschooling)等概念没有什么概念，更不用说[非学校教育](https://supermemo.guru/wiki/Unschooling)或[民主学校](https://supermemo.guru/wiki/Democratic_school)。一个普通的德国或瑞典公民非常相信，由于学校社会化的价值神话，学校是必要的。
 
 ## Jan Björklund
 
 [Jan Björklund](https://en.wikipedia.org/wiki/Jan_Björklund) (b. April 1962) is the bogeyman behind the [ban on homeschooling](https://supermemo.guru/wiki/Ban_on_homeschooling) in Sweden. As Education Minister 2007-2014, he introduced wide-sweeping and controversial reforms. He blamed falling performance of Swedish students on Social Democrats. Despite being a leader of a party, which is liberal in name, Björklund has committed the most illiberal crime of education: he banned homeschooling.
 
+[Jan Björklund](https://en.wikipedia.org/wiki/Jan_Björklund)（1962年4月生）是瑞典[禁止家庭教育](https://supermemo.guru/wiki/Ban_on_homeschooling)的幕后黑手。作为 2007-2014 年的教育部长，他推行了广泛的、有争议的改革。他将瑞典学生的成绩下降归咎于社会民主党人。尽管比约克伦是一个名义上的自由主义政党的领导人，但他却犯下了教育领域最不自由的罪行：他禁止家庭教育。
+
 The entire Björklund's own education took place in military institutions of learning. He advanced to the rank of major and knows about military matters infinitely more than he knows about education. Appropriately, as an expression of his authoritarian character, most of his ideas are disciplinarian in nature. New law makes it possible to confiscate child's cell phone. This reminds me how traumatic was the day when [my worst teacher](https://supermemo.guru/wiki/My_worst_teacher) confiscated my beloved zoo postcards. This is reminiscent of prisons, not schools. In Björklund's thinking, again, I hear echoes of the 1920s and 1930s, Prussian discipline, military service, homogeneous thinking, and conformity deprived of all signs of individual creativity. In a typical show of disciplinarian ignorance, Björklund compared [democratic schools](https://supermemo.guru/wiki/Democratic_school) to hospitals run by patients. Patients know a few things better than doctors: they can feel they own pain, they often know their disease history better, they know their habits and preferences, and, most of all, they usually care about their own health more than anyone else in the world. However, students have been equipped by evolution with the best learning guidance system: the [learn drive](https://supermemo.guru/wiki/Learn_drive) (see: [Optimality of the learn drive](https://supermemo.guru/wiki/Optimality_of_the_learn_drive). Students know far better, which portions of the learning material fit the [semantic structure](https://supermemo.guru/wiki/Semantic_network) of knowledge stored in their long-term memory. Teachers have no insight into individual brains and only comply with a schedule imposed by national [curricula](https://supermemo.guru/wiki/Curriculum). This model of learning fits perfectly into Björklund's militaristic view of what school should accomplish. When Sweden suffered the "[PISA](https://supermemo.guru/wiki/PISA) shock", Bjorklund would follow a typical military prescription: teacher authority, classroom discipline, more grading, earlier assessment. Björklund wanted to terminate the Swedish free school experiment by mass re-nationalization [[1\]](http://www.thelocal.se/20140210/sweden-failed-in-decentralizing-schools-report). If I wanted a new Napoleonic army for Sweden, I would choose Björklund to run the education system.
+
+比约克伦德自己的全部教育都是在军事学习机构中进行的。他升至少校军衔，对军事事务的了解远远超过对教育的了解。作为他专制性格的体现，他的大部分想法都具有纪律性，这是很恰当的。新法律规定可以没收孩子的手机。这让我想起了[我最差的老师](https://supermemo.guru/wiki/My_worst_teacher)没收我心爱的动物园明信片的那一天，是多么的伤感。这让人想起了监狱，而不是学校。在比约克伦的思维中，我再次听到了20世纪20年代和30年代的回声，普鲁士式的纪律、兵役、同质化的思维，以及被剥夺了所有个人创造力迹象的一致性。在一个典型的纪律性无知的表现中，比约克伦把[民主学校](https://supermemo.guru/wiki/Democratic_school)比作由病人管理的医院。病人比医生更了解一些事情：他们能感觉到自己的疼痛，他们往往更了解自己的疾病史，他们知道自己的习惯和喜好，最重要的是，他们通常比世界上任何其他人都更关心自己的健康。然而，学生在进化过程中配备了最好的学习指导系统：[学习驱动](https://supermemo.guru/wiki/Learn_drive)（见：[学习驱动的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)。学生更清楚，学习材料的哪些部分符合他们长期记忆中储存的知识的[语义结构](https://supermemo.guru/wiki/Semantic_network)。教师对个人的大脑没有洞察力，只能遵守国家[课程](https://supermemo.guru/wiki/Curriculum)规定的时间表。这种学习模式完全符合比约克伦德对学校应该完成的任务的军国主义观点。当瑞典遭受"[PISA](https://supermemo.guru/wiki/PISA)冲击 "时，比约克伦德会遵循一个典型的军事处方：教师权威、课堂纪律、更多评分、更早评估。比约克伦德想通过大规模的重新国有化来终止瑞典的自由学校实验[[1]](http://www.thelocal.se/20140210/sweden-failed-in-decentralizing-schools-report)。如果我想为瑞典建立一支新的拿破仑军队，我会选择比约克伦德来管理教育系统。
 
 When Björklund said school should add priority to history and religion, he again played a hand of God over child's mind. When it comes to religion, National Agency for Education would have all major religions treated equally. God Björklund said *"Christianity should receive higher priority"*. If the child wants to focus on biology, his history should be deferred to the time when his brain matures to understand its importance (as it was the very late case in my own life)(see: [Learning history](https://supermemo.guru/wiki/Learning_history)). If the kid shows no interest in religion, he should have an option to defer that subject as well. On the other hand, if someone comes to school with strong Christian, or perhaps Muslim convictions, he should also have an option of studying the area that keeps him passionate. One of interesting Björklund ideas is to introduce compulsory Chinese on the assumption China will soon be a dominant world power. Where Sweden got a lot of success in social engineering, Björklund's mind-engineering is a step too far. No ministry should ever rule over people's minds, and kids should be free from indoctrination most of all.
 
+当比约克伦说学校应该优先考虑历史和宗教时，他又一次将上帝之手伸向了孩子的心灵。谈到宗教，国家教育署将平等对待所有主要宗教。比约克伦上帝说*"基督教应该获得更高的优先权 "*。如果孩子想专注于生物学，他的历史应该推迟到他的大脑成熟到可以理解其重要性的时候（就像我自己生活中很晚的情况一样）（见：[学习历史](https://supermemo.guru/wiki/Learning_history)）。如果孩子对宗教没有兴趣，他也应该选择推迟这一科目。另一方面，如果有人带着强烈的基督教信仰，或者是穆斯林信仰来到学校，他也应该有机会选择学习让他充满激情的领域。比约克伦的一个有趣的想法是，假设中国很快就会成为一个占主导地位的世界大国，因此要引入必修的中文。瑞典在社会工程方面取得了很大的成功，而比约克伦德的思想工程却走得太远。任何部门都不应该统治人们的思想，孩子们最应该免于被灌输。
+
 When Tobias Krantz left the post of Minister for Higher Education and Research in 2009, the post was abolished and the duties were taken over by Jan Bjorklund who got no academic qualifications for the job.
 
-## Anna Ekström
+2009 年，托比亚斯-克兰茨离开了高等教育和研究部部长的职位，该职位被废除，职责由扬-比约克伦德接管，他没有任何学术资格来担任该职务。
+
+## Anna Ekström 安娜-埃克斯特罗姆
 
 In October 2014, Green party's Gustav Fridolin, just 31-years-old took the post of the Minister of Education. Born in 1983, fluent in English, Fridolin believed reforms were urgent. However, when Anna Ekström (b. 1959) took over the post, things returned to the same old mode of reasoning ([source](https://www.tellerreport.com/news/2019-08-15---minister-of-education-anna-ekström-says-no-to-more-homeschooling-.ryVcojr7NB.html)):
 
+2014年10月，年仅31岁的绿党人古斯塔夫-弗里多林（Gustav Fridolin）担任了教育部长一职。弗里多林出生于1983年，能说流利的英语，他认为改革是迫切的。然而，当安娜-埃克斯特伦（Anna Ekström，1959年生）接任后，事情又回到了原来的推理模式（[来源](https://www.tellerreport.com/news/2019-08-15---minister-of-education-anna-ekström-says-no-to-more-homeschooling-.ryVcojr7NB.html)）：
+
 > In Sweden, the school law applies, and for Swedish children, the [curriculum](https://supermemo.guru/wiki/Curriculum) applies, and what is in the **curriculum is very important for children** and students to learn in order for them to **do well in life**
+>
+> 在瑞典，学校法适用，对瑞典儿童来说，[课程](https://supermemo.guru/wiki/Curriculum)适用，**课程中的内容对儿童**和学生学习非常重要，以便他们在生活中**表现良好**。
 
 Like many before her, Ekström believes in the oxymoron of the right to [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) ([source](https://www.denandraresan.com/the-history-of-school-in-sweden-and-the-situation-today/)):
 
+像她之前的许多人一样，埃克斯特罗姆相信[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的权利是矛盾的（[来源](https://www.denandraresan.com/the-history-of-school-in-sweden-and-the-situation-today/)）:
+
 > One of the reasons why we have **[compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling)** is that we **allow** the children’s **right** to education before the parents’ right to decide on their children
+>
+> 我们有**[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)**的原因之一是，我们**允许**儿童的**权利**在父母决定其子女的权利之前接受教育
 
 Assuming the translations are correct, Anna Ekström seems to be [reading from the same old phone book](https://supermemo.guru/wiki/Phone_book). There is no room for deeper understanding of [high quality learning](https://supermemo.guru/wiki/Free_learning).
 
-## Contrasts
+假设翻译正确的话，安娜-埃克斯特罗姆似乎是在[读同一个旧电话簿](https://supermemo.guru/wiki/Phone_book)。对[高质量的学习](https://supermemo.guru/wiki/Free_learning)没有深入理解的空间。
+
+## Contrasts 对比
 
 Recent coronavirus pandemic provides a fantastic research ground for those who study how knowledge affects policy. At the time when knowledge of the virus is limited, and knowledge of optimum pathways to herd immunity is slow to percolate, leaders, parliaments, states, cities and provinces adopt policies that are as different as chalk from cheese. The changes in policy are sensitive to the inflow of new knowledge, and to changes in personal opinion. In Poland, we had a ridiculous two week ban on entry to woods and (empty) beaches. It came and went away like a case of bad flu. Clearly, it was a government's shot in the foot (or rather in national immunity). In this chaotic time, leaders determine national outcomes. Ignorance determines who lives and who dies.
 
+最近的冠状病毒大流行为那些研究知识如何影响政策的人提供了一个奇妙的研究场所。在对病毒的了解有限，而对群体免疫的最佳途径的了解又很缓慢的时候，领导人、议会、州、市和省采取的政策就像粉笔和奶酪一样不同。政策的变化对新知识的流入和个人意见的变化都很敏感。在波兰，我们有一个可笑的两周禁止进入森林和（空）海滩的禁令。它像一例糟糕的流感一样来了又走了。很明显，这是政府的一记重拳（或者说是国家的免疫力）。在这个混乱的时代，领导人决定国家的结果。无知决定了谁的生命和谁的死亡。
+
 I like [David Katz](https://youtu.be/Lze-rMYLf2E)'s position on tackling the crisis. I came to the exact same conclusions when I was diverted by police from my usual jogging route in a scenic abandoned path via woods (Apr 9, 2020). In society's best interest I should catch the virus (assuming I would not die). Naturally, this would not happen in cold wind in empty woods, which was my best place to actually stay healthy.
+
+我喜欢[David Katz](https://youtu.be/Lze-rMYLf2E)关于解决危机的立场。当我被警察从我通常的慢跑路线上转移到一条风景优美的废弃小路，经过树林时，我得出了完全相同的结论（2020年4月9日）。为了社会的最佳利益，我应该感染病毒（假设我不会死）。自然，这不会发生在空旷的树林里的寒风中，而这是我真正保持健康的最佳场所。
 
 I was pretty impressed that Sweden decided to take the boldest steps in Europe. If policies are determined by an epidemiologist, they are more likely to make sense than those set by politicians. However, Anders Tegnell made a comment that hinted at his "Swedish mindset": *"children must go to school so that nurses could go to work"*. Moreover, cruelly, elderly care centers contribute half of the death statistics. This reminds me the ominous words of late Raymond Moore: *"[the earlier you institutionalize your children, the earlier they will institutionalize you!](https://supermemo.guru/wiki/Raymond_Moore:_On_early_institutionalization)"*
 
+我对瑞典决定在欧洲采取最大胆的措施印象深刻。如果政策是由流行病学家决定的，那么它们比政治家制定的政策更有可能是合理的。然而，安德斯-泰格内尔的一句话暗示了他的 "瑞典心态"：*"儿童必须去上学，这样护士才能去工作 "*。此外，残酷的是，老年人护理中心贡献了一半的死亡统计数据。这让我想起了已故的雷蒙德-摩尔的不祥之言：*"[你越早将你的孩子送入机构，他们就越早将你送入机构！](https://supermemo.guru/wiki/Raymond_Moore:_On_early_institutionalization)"*。
+
 In contrast, Germany appeared to be rather heavy-handed. Under the leadership of the scientist-in-chief, Angela Merkel, they even need to wear mandatory face masks in public. Not often do I see police clash with protesters in the ordnung country.
+
+相比之下，德国似乎相当重手。在首席科学家安吉拉-默克尔的领导下，他们甚至需要在公共场合戴上强制性面罩。在法令之国，我不经常看到警察与抗议者发生冲突。
 
 Policy contrasts should not cover for the degree of conformity in society. Rules and recommendations are adhered to pretty well in both Sweden and Germany. In contrast, in the US, citizens can shout their way out of freedom-limiting restrictions. It is impossible to say what balance of conformity and resistance is optimum. However, it is pretty easy to claim that civic knowledge and general knowledge are universally helpful. This is why all limits on [freedom of learning](https://supermemo.guru/wiki/Free_learning) are harmful.
 
+政策对比不应涵盖社会中的遵守程度。在瑞典和德国，规则和建议都得到了很好的遵守。与此相反，在美国，公民可以通过喊话来摆脱限制自由的限制。不可能说遵从和抵制之间的平衡是最佳的。然而，声称公民知识和一般知识具有普遍的帮助是相当容易的。这就是为什么对[学习自由](https://supermemo.guru/wiki/Free_learning)的所有限制都是有害的。
+
 The role of civic conformity is less decisive in knowledgeable societies
 
-## Future
+在有知识的社会中，公民顺从的作用不那么具有决定性
+
+## Future 未来
 
 The main forces that will overturn the present status quo are:
 
@@ -69,8 +117,19 @@ The main forces that will overturn the present status quo are:
 - grass-root protest of children who have first-hand knowledge of the inefficiency of [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) (with help of personalities such as Greta Thunberg)
 - on-line access to knowledge of enlightened educational solutions employed around the world
 
-## Further reading
+颠覆目前现状的主要力量是：
+
+- 年轻一代的心理健康下降
+- 创新能力的下降
+- 对[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的低效率有第一手认识的儿童的基层抗议(在格雷塔-唐伯格等人的帮助下)
+- 在线获取世界各地采用的开明的教育解决方案的知识。
+
+## Further reading 进一步阅读
 
 - [Ban on homeschooling](https://supermemo.guru/wiki/Ban_on_homeschooling)
 - [Elizabeth Bartholet: ignorant attack on homeschooling](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
 - [Homeschooling in Sweden](https://www.youtube.com/watch?v=p2YAD49NQ54) (6 min video)
+
+- [禁止家庭教育](https://supermemo.guru/wiki/Ban_on_homeschooling)
+- [Elizabeth Bartholet：对家庭教育的无知攻击](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
+- [瑞典的家庭教育](https://www.youtube.com/watch?v=p2YAD49NQ54) (6分钟视频)
